# classicopsgmom

Débat OM-PSG/CLASSICO API CHATGPT/: .env  README.md  main.py  requirements.txt
Débat OM-PSG/CLASSICO API CHATGPT/football_debate/: ai_config.py
Débat OM-PSG/CLASSICO API CHATGPT/football_debate/backend/: main.py
Débat OM-PSG/CLASSICO API CHATGPT/football_debate/debate_engine/: conversation_manager.py  debate_service.py  persona_manager.py
Débat OM-PSG/CLASSICO API CHATGPT/football_debate/llm_interface/: openai_interface.py
Débat OM-PSG/CLASSICO API CHATGPT/football_debate/preprocessing/: data_loader.py
Débat OM-PSG/CLASSICO API CHATGPT/frontend/: app.py
Débat OM-PSG/CLASSICO OLLAMA/: main.py  requirements.txt
Débat OM-PSG/CLASSICO OLLAMA/debates/: debate_1747574210_Quel_club_a_le_meilleur_milieu.json
Débat OM-PSG/CLASSICO OLLAMA/football_debate/: ai_config.py  pyproject.toml
Débat OM-PSG/CLASSICO OLLAMA/football_debate/api_client/: api_football_client.py
Débat OM-PSG/CLASSICO OLLAMA/football_debate/debate_engine/: conversation_manager.py  debate_service.py  knowledge_retriever.py  persona_manager.py
Débat OM-PSG/CLASSICO OLLAMA/football_debate/llm_interface/: ollama_interface.py
Débat OM-PSG/CLASSICO OLLAMA/football_debate/preprocessing/: data_cleaning.py  data_loader.py
Débat OM-PSG/CLASSICO OLLAMA/frontend/: app.py
